--- a/librtsp/build.gradle
+++ b/librtsp/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven' // ADD THIS
+
+group='com.github.teocci'
 
 android {
     compileSdkVersion 25
@@ -7,6 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 25
+        versionCode 1
+        versionName "1.0"
     }
 
     buildTypes {
